# PyMJC

./: .gitignore  README.md  REPORTS.md  pyproject.toml
.github/workflows/: ci.yml
pymjc/: log.py  run.py  util.py
pymjc/back/: assem.py  codegen.py  flowgraph.py  graph.py  mips.py  regalloc.py
pymjc/front/: ast.py  canon.py  frame.py  lexer.py  parser.py  symbol.py  temp.py  translate.py  tree.py  visitor.py  visitorkinds.py  visitortypes.py
tests/: test_lexer.py  test_parser.py  test_semantic.py  util.py
tests/testdata/correct/: BinarySearch.java  Factorial.java
tests/testdata/faulty/semantic/: SemanticFaultyAlreadyDeclared.java  SemanticFaultyArrayUsage.java  SemanticFaultyBinaryTypeMismatch.java  SemanticFaultyIfAndWhileUsage.java  SemanticFaultyInvalid.java  SemanticFaultyNotTypeMismatch.java  SemanticFaultyReturnTypeAndArgUsage.java  SemanticFaultyUndeclared.java
tests/testdata/faulty/syntax/: SyntaxFaultyBinarySearch.java  SyntaxFaultyBinaryTree.java  SyntaxFaultyBubbleSort.java  SyntaxFaultyFactorial.java  SyntaxFaultyLinearSearch.java  SyntaxFaultyLinkedList.java  SyntaxFaultyQuickSort.java  SyntaxFaultyTreeVisitor.java
tests/testdata/faulty/tokens/: TokenFaultyBinarySearch.java  TokenFaultyBinaryTree.java  TokenFaultyBubbleSort.java  TokenFaultyFactorial.java  TokenFaultyLinearSearch.java  TokenFaultyLinkedList.java  TokenFaultyQuickSort.java  TokenFaultyTreeVisitor.java
tests/testoracle/: lexer_test_suite_oracles.json  parser_test_suite_oracles.json  semantic_test_suite_oracles.json
